--- a/css/style.css
+++ b/css/style.css
@@ -6354,6 +6354,11 @@ nav a#pull {
   text-align: center;
 }
 
+@media screen and (max-width:1275px){
+  .primerPagina h2 {
+      font-size: 4rem;
+  }
+}
 
 @media screen and (max-width:1200px){
   .mapa {
@@ -6365,6 +6370,9 @@ nav a#pull {
   .mapa {
       width: 13rem;
   }
+  .primerPagina h2 {
+    font-size: 3rem;
+}
 
   .contenedorHamb .imagenHamb{
       width: 10rem;
@@ -6446,6 +6454,7 @@ nav a#pull {
     height: 80rem;
   }
 }
+
 
 @media screen and (max-width:405px){
   .menu {
