--- a/css/style.css
+++ b/css/style.css
@@ -6336,19 +6336,20 @@ nav a#pull {
 
 .botonMapa {
   background-color: white;
-  border: 0.2rem solid green;
+  border: 0.2rem solid brown;
   margin: 2rem;
   border-radius: 10%;
 }
 
 .botonMapa:hover {
-  background-color: green;
+  background-color: brown;
 }
 
 .botonMapa a {
-  color: #000;
+  color: black;
   text-decoration: none;
 }
+
 
 .container {
   text-align: center;
