--- a/css/style.css
+++ b/css/style.css
@@ -2694,7 +2694,7 @@ span.ico-holder {
 #div-01 { background-image: url(../images/divider-01.jpg); }
 #div-02 { background-image: url(../images/divider-02.jpg); }
 #div-03 { background-image: url(../images/divider-03.jpg); }
-#div-04 { background-image: url(../images/divider-04.jpg); }
+#div-04 { background-image: url(../images/granero/lugar/WhatsApp\ Image\ 2023-07-15\ at\ 21.03.32.jpeg); }
 #div-05 { background-image: url(../images/divider-05.jpg); }
 
 
@@ -6357,7 +6357,10 @@ nav a#pull {
   justify-content: center;
 }
 
-
+.fotosComidas {
+  height: 19rem;
+  width: 17rem;
+}
 
 @media screen and (max-width:1275px){
   .primerPagina h2 {
