--- a/css/style.css
+++ b/css/style.css
@@ -1303,43 +1303,46 @@ span.item-code {
   03. PRELOAD SPINNER
   =========================================================================== */
 
-#loader-wrapper {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 9999999;
-  background-color: #f5f5f5;
-}
+
+  #loader-wrapper {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 9999999;
+    background-color: #f5f5f5;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 
 #loader {
-  display: block;
+  display: flex;
   position: relative;
-  top: 50%;
   transform: translateY(-50%);
 }
 
 .cssload-spinner {
-  height: 50px;
-  width: 50px;
-  margin: 0 auto;
+  justify-content: center;
+  align-items: center;
   position: relative;
-  animation: cssload-invert 1.7s infinite steps(2, end);
-  -o-animation: cssload-invert 1.7s infinite steps(2, end);
-  -ms-animation: cssload-invert 1.7s infinite steps(2, end);
-  -webkit-animation: cssload-invert 1.7s infinite steps(2, end);
-  -moz-animation: cssload-invert 1.7s infinite steps(2, end);
+  animation: preloadAnimation 1.5s infinite;
+}
+
+@keyframes preloadAnimation {
+  0%, 100% {
+      transform: scale(1);
+  }
+  50% {
+      transform: scale(1.2);
+  }
 }
 
 .cssload-ball {
-  height: 100%;
-  width: 100%;
-  position: absolute;
-  border-radius: 50%;
-  top: 0;
-  left: 0;
-  background: #e84e1d;
+  max-width: 50px;
+  max-height: 50px;
+  background-image: url(../images/iso-66.png);
 }
 
 .cssload-ball-1 {
@@ -2707,8 +2710,10 @@ span.ico-holder {
 #pb-1-1 { background-image: url(../images/pb-1-1.jpg); }
 #pb-1-2 { background-image: url(../images/pb-1-2.jpg); }
 #pb-1-3 { background-image: url(../images/pb-1-3.jpg); }
-#pb-2-1 { background-image: url(../images/pb-2-1.jpg); }
-#pb-2-2 { background-image: url(../images/pb-2-2.jpg); }
+#pb-2-1 { background-image: url(../images/granero/diseños/mila66.jpg); 
+  background-size: cover;
+  height: 25rem;}
+#pb-2-2 { background-image: url(../images/granero/lugar/311965753_627004405738442_3584953846829980256_n.jpg); }
 
 #promo-1 .row {
   margin-left: -10px;
@@ -6361,6 +6366,16 @@ nav a#pull {
   height: 19rem;
   width: 17rem;
 }
+
+.texto {
+  background-color: rgba(0, 0, 0, 0.5); 
+  padding: 1rem;
+}
+
+.texto h4 {
+  color: white;
+}
+
 
 @media screen and (max-width:1275px){
   .primerPagina h2 {
