--- a/css/museo.css
+++ b/css/museo.css
@@ -1,3 +1,5 @@
+
+
 .imagenUSA img {
     position: relative;
     width: 55rem;
@@ -24,15 +26,26 @@
 .enlace {
     position: absolute;
     text-decoration: none;
-    color: black;
+    color: white;
     /* Color del texto de los enlaces */
     padding: 5px 10px;
     /* Espaciado opcional alrededor de los enlaces */
-    font-size: 1.2rem;
+}
+
+.miniCartelMapa {
+    background-color: #015d52;
+    border: 1px solid white;
+    border-radius: 0.5rem 0.5rem 0.5rem 0.5rem;
+    display: flex;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
 
 .losAngeles {
     top: -13.5rem;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .losAngelesPunto {
@@ -48,8 +61,9 @@
 }
 
 .lasVegas {
-    top: -21rem;
-    left: 6rem;
+    top: -19rem;
+    left: 4rem;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .lasVegasPunto {
@@ -67,6 +81,7 @@
 .flagstaff {
     top: -15rem;
     left: 9rem;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .flagstaffPunto {
@@ -84,6 +99,7 @@
 .alburquerque {
     top: -18rem;
     left: 14rem;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .alburquerquePunto {
@@ -101,6 +117,7 @@
 .shamrock {
     top: -12rem;
     left: 19rem;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .shamrockPunto {
@@ -118,6 +135,7 @@
 .oklahomaCity {
     top: -17rem;
     left: 23rem;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .oklahomaCityPunto {
@@ -133,8 +151,9 @@
 }
 
 .springfield {
-    top: -18rem;
-    left: 27rem;
+    top: -15rem;
+    left: 35rem;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .springfieldPunto {
@@ -152,6 +171,7 @@
 .chicago {
     top: -25rem;
     left: 33rem;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .chicagoPunto {
@@ -195,8 +215,8 @@
 .cartelAuto {
     max-height: 10rem;
     max-width: 10rem;
-    top: -20rem;
-    left: 30rem;
+    top: -24rem;
+    left: 20rem;
 }
 
 .banderaUSA {
