--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,7 @@ html {
 body {
   font-family: 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   color: #283034;
+  background-color: #1E1E1E;
   font-weight: 300;
 }
 
@@ -283,6 +284,7 @@ body {
 
 .rel { 
   position: relative!important; 
+  background-color: rgb(65, 5, 65);
 }
 
 /*------------------------------------------*/
@@ -349,6 +351,10 @@ body {
 /*  HEADERS
 /*------------------------------------------*/
 
+.letrasBlancas {
+  color: white;
+}
+
 h1, h2, h3, h4, h5, h6 {  
   font-family: 'Oswald', sans-serif;
   line-height: 1.3;
@@ -388,7 +394,7 @@ h3.h3-xl { font-size: 3rem; }       /* 48px */
 h2.h2-xs { font-size: 3.125rem; }   /* 50px */
 h2.h2-sm { font-size: 3.25rem; }    /* 52px */
 h2.h2-md { font-size: 3.375rem; }   /* 54px */
-h2.h2-lg { font-size: 3.5rem; }     /* 56px */ 
+h2.h2-lg { font-size: 3.5rem; color: white; }     /* 56px */ 
 h2.h2-xl { font-size: 3.75rem; }    /* 60px */
 
 /*------------------------------------------*/
@@ -538,8 +544,8 @@ ul.txt-list {
 .scroll .red-hover:hover, 
 .white-color .red-hover:hover {
   color: #fff!important;
-  background-color: #e3000e;
-  border-color: #e3000e!important;
+  background-color: orange;
+  border-color: orangered!important;
 }
 
 .btn-tra-red, 
@@ -548,9 +554,9 @@ ul.txt-list {
 .tra-red-hover:hover, 
 .scroll .tra-red-hover:hover, 
 .white-color .tra-redhover:hover {
-  color: #e3000e!important;
+  
   background-color: transparent;
-  border-color: #e3000e!important;
+  border-color: orange!important;
 }
 
 .btn-meat, 
@@ -746,7 +752,7 @@ ul.txt-list {
 }
 
 .section-title p {
-  color: #888;
+  color: orange;
   padding: 0 18%;
   margin: 12px 0 0;
 }
@@ -793,7 +799,7 @@ ul.txt-list {
 .grey-color i, 
 .white-color .grey-color,
 .lightgrey-color .grey-color, 
-.grey-color span { color: #757575; }
+.grey-color span { color: orange; }
 
 .lightgrey-color,
 .lightgrey-color h2, 
@@ -898,7 +904,7 @@ ul.txt-list {
 .red-color i, 
 .white-color .red-color,
 .brown-color .red-color,
-.red-color span { color: #e3000e; }
+.red-color span { color: orangered; }
 
 .wine-color,
 .wine-color h2, 
@@ -1911,7 +1917,7 @@ span.item-code {
 @media (max-width: 1200px) {
   #header-3.navik-header {
     padding-top: 20px;
-    background: linear-gradient(rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0)100%);
+    background: w;
     background-size: cover;
     box-shadow: 0 0 4rem rgba(0, 0, 0, 2);
   }
@@ -1938,6 +1944,7 @@ span.item-code {
   font-size: 18px;
   padding-left: 16px;
   padding-right: 16px;
+  color: white;
 }
 
 .navbar-dark .navik-menu ul li > a {
@@ -2076,12 +2083,17 @@ span.ico-holder {
 #header-1.navik-header.sticky,
 #header-3.navik-header.sticky {
   padding-top: 0;
-  background-color: white;
-  background: snow;
+  background-color: #332f2c;
+  background: #332f2c;
 }
 
+.burger-menu {
+  color: white;
+}
 
-
+.line-menu {
+  background-color: white;
+}
 
 /* ==========================================================================
   05. HERO
@@ -2109,8 +2121,8 @@ span.ico-holder {
 
 #hero-4 {
   position: relative;
-  background-image: url(../images/granero/lugar/principal.jpeg);
-  padding-top: 170px;
+  background-image: url(../images/granero/lugar/halloween\ copia.webp);
+  padding-top: 400px;
 }
 
 #hero-5 .bg-inner {
@@ -6425,27 +6437,40 @@ nav a#pull {
   text-transform: uppercase;
   letter-spacing: 0.5px;
 }
-
 .bordes {
   position: relative;
-  border-bottom: none; /* Eliminar el borde inferior predeterminado */
+  border-bottom: none;
+  /* Eliminar el borde inferior predeterminado */
 
   /* Agregar imagen de fondo al borde */
   background-image: url('../images/granero/diseños/cuadradito.png');
-  background-repeat: repeat-x; /* Repetir la imagen horizontalmente */
-  background-position: bottom center; /* Posicionar la imagen en la parte inferior */
-  background-size: auto 2rem; /* Ajustar el tamaño de la imagen */
+  background-repeat: repeat-x;
+  /* Repetir la imagen horizontalmente */
+  background-position: bottom center;
+  /* Posicionar la imagen en la parte inferior */
+  background-size: auto 2rem;
+  /* Ajustar el tamaño de la imagen */
 }
 
 .bordes::before {
   content: "";
   position: absolute;
-  bottom: 0; /* Colocar el borde en la parte inferior */
+  bottom: 0;
+  /* Colocar el borde en la parte inferior */
   left: 0;
   width: 100%;
-  height: 2rem; /* Altura del borde */
-  background-color: rgba(0, 0, 0, 0.5); /* Fondo oscuro transparente */
-  z-index: -1;
+  height: 2rem;
+  /* Altura del borde */
+  background-color: rgba(0, 0, 0, 0.5);
+  /* Fondo oscuro transparente */
+  z-index: 1;
+  background-image: url('../images/granero/diseños/cuadradito.png');
+  background-repeat: repeat-x;
+  /* Repetir la imagen horizontalmente */
+  background-position: bottom center;
+  /* Posicionar la imagen en la parte inferior */
+  background-size: auto 2rem;
+  /* Ajustar el tamaño de la imagen */
 }
 
 .arregloBordes {
