--- a/css/style.css
+++ b/css/style.css
@@ -609,8 +609,8 @@ ul.txt-list {
 .scroll .yellow-hover:hover, 
 .white-color .yellow-hover:hover {
   color: #333435!important;
-  background-color: #ffef4a;
-  border-color: #ffef4a!important;
+  background-color: #f3961a;
+  border-color: #f3961a!important;
 }
 
 /*------------------------------------------*/
