--- a/css/style.css
+++ b/css/style.css
@@ -2749,11 +2749,13 @@ span.ico-holder {
 #pb-1-1 { background-image: url(../images/pb-1-1.jpg); }
 #pb-1-2 { background-image: url(../images/pb-1-2.jpg); }
 #pb-1-3 { background-image: url(../images/pb-1-3.jpg); }
-#pb-2-1 { background-image: url(../images/granero/diseños/mila66.jpg); 
+#pb-2-1 { background-image: url(../images/granero/halloween/afiche-burger.webp); 
   background-size: cover;
-  height: 25rem;}
+  height: 25rem;
+  border: 0.1rem solid white;}
 #pb-2-2 { background-image: url(../images/granero/lugar/311965753_627004405738442_3584953846829980256_n.jpg); 
-  height: 25rem;}
+  height: 25rem;
+  border: 0.1rem solid white;}
 
 #promo-1 .row {
   margin-left: -10px;
