--- a/css/museo.css
+++ b/css/museo.css
@@ -216,7 +216,7 @@
     max-height: 10rem;
     max-width: 10rem;
     top: -24rem;
-    left: 20rem;
+    left: 18rem;
 }
 
 .banderaUSA {
@@ -363,8 +363,8 @@
     .cartelAuto {
         max-height: 7rem;
         max-width: 7rem;
-        top: -22rem;
-        left: 20rem;
+        top: -18rem;
+        left: 10rem;
     }
 
     .banderaUSA {
@@ -376,7 +376,9 @@
     }
 }
 
-
+.cajaCiudadCelu {
+    display: none;
+}
 
 @media (max-width: 890px) {
     .contenedor-galeria{
@@ -391,28 +393,370 @@
         align-items: center;
         flex-direction: row;
         background-color: white;
-        width: 40rem;
+        width: 30rem;
         height: 30rem;
-        
+        border-radius: 2rem 2rem 2rem 2rem;
+        border: 0.1rem solid black;
     }
     .infoCiudad {
         display: flex;
         justify-content: center;
         align-items: center;
+        
     }
     .infoCiudad p {
         display: flex;
+        
+    }
+    .textoCelu {
+        font-size: 0.7rem;
+        width: 14rem;
+        text-align: justify;
     }
     .fotosCiudad {
         display: flex;
         justify-content: center;
         align-items: center;
+        flex-direction: column;
     }
     .fotosCiudad img {
-        width: 10rem;
-        height: 10rem;
+        width: 7rem;
+        height: 7rem;
+        margin: 1rem;
+    }
+    .informacionCiudadChicago p {
+        width: 14rem !important;
+        font-size: 0.7rem;
+        text-align: justify;
+    }
+}
+
+@media (max-width: 669px) {
+    .imagenUSA img {
+        position: relative;
+        width: 30rem;
+    }
+
+    .miniCartelMapa {
+        font-size: 0.5rem;
+    }
+
+    .losAngeles {
+        top: -7rem;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+    }
+
+    .losAngelesPunto {
+        top: -9.6rem;
+        left: 1.2rem;
+        font-size: 2rem;
+        color: orange;
+    }
+
+
+    .lasVegas {
+        top: -11.4rem;
+        left: 2rem;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+    }
+
+    .lasVegasPunto {
+        top: -10.5rem;
+        left: 3rem;
+        font-size: 2rem;
+        color: orange;
+    }
+
+
+    .flagstaff {
+        top: -11.4rem;
+        left: 6rem;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+    }
+
+    .flagstaffPunto {
+        top: -10.5rem;
+        left: 5.5rem;
+        font-size: 2rem;
+        color: orange;
+    }
+
+
+    .alburquerque {
+        top: -7rem;
+        left: 7rem;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+    }
+
+    .alburquerquePunto {
+        top: -9.8rem;
+        left: 8rem;
+        font-size: 2rem;
+        color: orange;
+    }
+
+
+    .shamrock {
+        top: -9.4rem;
+        left: 11rem;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+    }
+
+    .shamrockPunto {
+        top: -8.7rem;
+        left: 10.7rem;
+        font-size: 2rem;
+        color: orange;
+    }
+
+
+    .oklahomaCity {
+        top: -5.5rem;
+        left: 12rem;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+    }
+
+    .oklahomaCityPunto {
+        top: -8.4rem;
+        left: 13rem;
+        font-size: 2rem;
+        color: orange;
+    }
+
+
+    .springfield {
+        top: -9rem;
+        left: 20rem;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+    }
+
+    .springfieldPunto {
+        top: -10rem;
+        left: 17rem;
+        font-size: 2rem;
+        color: orange;
+    }
+
+    .chicago {
+        top: -15rem;
+        left: 17rem;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+    }
+
+    .chicagoPunto {
+        top: -14rem;
+        left: 18rem;
+        font-size: 2rem;
+        color: orange;
+        animation: agrandarAchicar 1s infinite alternate, cambiarColor 1s infinite alternate;
+    }
+
+    .cartelAuto {
+        max-height: 7rem;
+        max-width: 7rem;
+        top: -19rem;
+        left: 14rem;
+    }
+
+    .banderaUSA {
+        max-height: 7rem;
+        max-width: 7rem;
+        top: -17rem;
+        left: -5rem;
+        transform: rotate(-30deg)
+    }
+
+    .cartelRuta66 {
+        max-height: 6rem;
+        max-width: 4rem;
+        top: -19rem;
+        left: 2rem;
+    }
+}
+
+@media (max-width: 513px) {
+    .cajaCiudadCelu{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: row;
+        background-color: white;
+        width: 25rem;
+        height: 30rem;
+        border-radius: 2rem 2rem 2rem 2rem;
+        border: 0.1rem solid black;
     }
     
+}
+
+@media (max-width: 489px) {
+    .imagenUSA img {
+        position: relative;
+        width: 22rem;
+    }
+
+    .miniCartelMapa {
+        font-size: 0.4rem;
+    }
+
+    .losAngeles {
+        top: -4rem;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+    }
+
+    .losAngelesPunto {
+        top: -7rem;
+        left: 0.5rem;
+        font-size: 1.4rem;
+        color: orange;
+    }
+
+
+    .lasVegas {
+        top: -8.2rem;
+        left: 1rem;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+    }
+
+    .lasVegasPunto {
+        top: -7.5rem;
+        left: 2rem;
+        font-size: 1.4rem;
+        color: orange;
+    }
+
+
+    .flagstaff {
+        top: -8.2rem;
+        left: 4.2rem;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+    }
+
+    .flagstaffPunto {
+        top: -7.6rem;
+        left: 4rem;
+        font-size: 1.4rem;
+        color: orange;
+    }
+
+
+    .alburquerque {
+        top: -5rem;
+        left: 4rem;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+    }
+
+    .alburquerquePunto {
+        top: -6.9rem;
+        left: 6.4rem;
+        font-size: 1.4rem;
+        color: orange;
+    }
+
+
+    .shamrock {
+        top: -7rem;
+        left: 7.9rem;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+    }
+
+    .shamrockPunto {
+        top: -6.4rem;
+        left: 7.8rem;
+        font-size: 1.4rem;
+        color: orange;
+    }
+
+
+    .oklahomaCity {
+        top: -4rem;
+        left: 9rem;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+    }
+
+    .oklahomaCityPunto {
+        top: -6.2rem;
+        left: 9.5rem;
+        font-size: 1.4rem;
+        color: orange;
+    }
+
+
+    .springfield {
+        top: -6rem;
+        left: 14rem;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+    }
+
+    .springfieldPunto {
+        top: -7.5rem;
+        left: 12.4rem;
+        font-size: 1.4rem;
+        color: orange;
+    }
+
+    .chicago {
+        top: -10rem;
+        left: 15rem;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+    }
+
+    .chicagoPunto {
+        top: -10.5rem;
+        left: 13rem;
+        font-size: 1.6rem;
+        color: orange;
+        animation: agrandarAchicar 1s infinite alternate, cambiarColor 1s infinite alternate;
+    }
+
+    .cartelAuto {
+        max-height: 4rem;
+        max-width: 4rem;
+        top: -15rem;
+        left: 10rem;
+    }
+
+    .banderaUSA {
+        max-height: 5rem;
+        max-width: 5rem;
+        top: -14rem;
+        left: -2rem;
+        transform: rotate(-30deg)
+    }
+
+    .cartelRuta66 {
+        max-height: 3rem;
+        max-width: 3rem;
+        top: -13rem;
+        left: 2rem;
+    }
+
+    .cajaTitulo {
+        max-width: 22rem;
+    }
+    
+    .cajaCiudadCelu{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: row;
+        background-color: white;
+        width: 22rem;
+        height: 30rem;
+        border-radius: 2rem 2rem 2rem 2rem;
+        border: 0.1rem solid black;
+    }
+
+    .informacionCiudadChicago p {
+        font-size: 0.6rem;
+        max-width: 12rem;
+    }
+
+    .textoCelu {
+        font-size: 0.6rem;
+        max-width: 12rem;
+    }
+
 }
 
 
