--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1652,8 +1652,7 @@
   .tm-meta span { font-size: 1.25rem; }
   .tm-social a { width: 50px; height: 50px; font-size: 1.35rem; line-height: 50px!important; }
 
-  /* Scroll Up */
-  #scrollUp { bottom: 20px; right: 20px; }
+ 
 
   
 
@@ -2199,8 +2198,7 @@
   .tm-meta span { font-size: 1.25rem; }
   .tm-social a { width: 54px; height: 54px; font-size: 1.45rem; line-height: 54px!important; }
 
-  /* Scroll Up */
-  #scrollUp { bottom: 20px; right: 20px; }
+  /* Scroll Up *
 
 
 
@@ -2722,8 +2720,7 @@
   .card-box h5 { font-size: 1.75rem; }
   .card-box p { font-size: 1.0625rem; padding: 0 5%; }
 
-  /* Scroll Up */
-  #scrollUp { bottom: 20px; right: 20px; }
+  
 
   /* Single Product */
   #product-1-data .tabs-nav { margin-bottom: 30px; }
